
Ver.5.3 (in development)
- MediaAccess class can consider EXIF orientation in a JPEG file (require Exif and GD extension
  for PHP).
- Update phpseclib to version 1.0.0.
- The getNodeIdsHavingTargetFromNode method of INTERMediatorOnPage object accepts the array
  for the first parameter.
- Utility methods, dateStringISO, dateStringFileMaker and timeString, are defined in INTERMediatorLib.

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- Add IMLIbUI.validation() as a public method.
- INTER-Mediator-Server VM can update with just "git pull origin master" command.
- DataConverter classes for currency and number was improved in case of missing locale information.
- The following 4 methods can be defined and they are going to be called when the page moves to
  the master/detail navigation. All function can have two parameters that are referring the master
  and detail contexts.
      INTERMediatorOnPage.naviBeforeMoveToDetail
      INTERMediatorOnPage.naviAfterMoveToDetail
      INTERMediatorOnPage.naviBeforeMoveToMaster
      INTERMediatorOnPage.naviAfterMoveToMaster
- The following variables in the params.php file weren't effective, so they are removed from the file.
      $prohibitSetCondition = true;
      $prohibitSetOrder = true;
      $prohibitSetWriteCriticalFields = true;
      $prohibitIgnoreCondition = true;
      $httpAccounts = array('user'=>'testtest');
      $httpRedirectURL = "http://10.0.1.226/im/Sample_products/products_MySQL.html";
- Now setting the 'records' key manually in the definition file to a value bigger than maxrecords