@@ -1,0 +1,9 @@
+source 'https://rubygems.org/'
+
+gem 'docker-api'
+
+group :test do
+  gem 'specinfra', '2.12.7'
+  gem 'serverspec'
+  gem 'itamae'
+end
