@@ -1,0 +1,12 @@
+require 'spec_helper'
+
+if ENV['CIRCLECI']
+  class Docker::Container
+    def remove(options={}); end
+    alias_method :delete, :remove
+  end
+end
+
+describe package('ruby') do
+  it { should be_installed }
+end
