@@ -1,0 +1,6 @@
+require "docker"
+require "serverspec"
+
+set :backend, :docker
+set :docker_url, ENV["DOCKER_HOST"]
+set :docker_image, "ubuntu"
